--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,12 @@ body{
     margin-right: 10px;
 }
 
+.nav-contato{
+    background-color: #1de054;
+    color: white !important;
+    box-shadow: 0px 2px 0px #18943b;
+}
+
 .logo-expanded{
     height: 70px;
     transition: 0.3s;
@@ -268,7 +274,7 @@ article{
     }
 
     .logo-scroll{
-        height: 70px;
+        height: 60px;
     }
 
     .pc{
