--- a/v3/css/style.css
+++ b/v3/css/style.css
@@ -22,6 +22,14 @@ header{
     margin-bottom: 100px;
 }
 
+.headerContainer{
+    background-image: url("../svg/invisivel-ilustracao.svg");
+    background-position: right;
+    background-repeat: no-repeat;
+    background-size: 40%;
+    min-height: 450px;
+}
+
 .logomarca{
     font-weight: bold;
     font-size: 1.5em;
