--- a/css/style.css
+++ b/css/style.css
@@ -1,411 +1,342 @@
-@font-face {
-    font-family: HelveticaNeue;
-    src: url(../fonts/HelveticaNeue-Black.woff);
-}
-
-@font-face {
-    font-family: HelveticaNeue-Thin;
-    src: url(../fonts/HelveticaNeue-Thin.woff);
-}
-
-@import url('https://fonts.googleapis.com/css?family=Roboto');
-
-*{
-    transition: linear 0.5s;
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap');
+body, html{
+    margin: 0;
+    padding: 0;
 }
 
 body{
-    font-family: 'Roboto', sans-serif;
-    word-wrap: break-word;
+    background-color: #F9F9F9;
+    font-family: 'Open Sans', sans-serif!important;
 }
 
-.navbar{
-    padding: 5px 1rem;
-}
-
-.nav-item{
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
-.nav-contato{
-    width: 90px;
-    background-color: #1de054;
-    color: white !important;
-    box-shadow: 0px 2px 0px #18943b;
-    border-radius: 4px;
-    text-align: center;
-}
-
-.logo-expanded{
-    height: 55px;
-    transition: 0.3s;
-}
-
-.active{
-    font-weight: bolder;
-}
-
-.bg-light-blue{
-    background-color: #009bdb;
-}
-
-header{
-    height: 100vh;
-}
-
-.banner{
-    width: 100%;
-    height: 100%;
-    background-color: #009bdb;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    position: relative;
-}
-
-.chamada{
-    margin: 100px 0;
-}
-
-.chamada-textos{
-    text-align: left;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-.banner-title{
-    font-family: HelveticaNeue;
-}
-
-
-.btn:hover{
-    transform: translateY(-10px);
-}
-
-.btn{
-    border-radius: 4px;
-    font-family: HelveticaNeue;
-    margin-top: 20px;
-    transition: 0.5s;
-}
-
-.btn-verde{
-    background-color: #1de054;
-    padding: 10px 50px 10px 50px;
-    color: white;
-    box-shadow: 0px 3px 0px #18943b;
-}
-
-.btn-verde:hover, .btn-azul:hover{
-    color: white;
-}
-
-.btn-card{
-    font-family: 'Roboto', sans-serif;
-    font-size: 1rem;
-}
-
-.btn-azul{
-    background-color: #009bdb;
-    padding: 10px 50px 10px 50px;
-    color: white;
-    box-shadow: 0px 3px 0px #167ca6;
-}
-
-.ilustracao{
-    width: 100%;
-}
-
-.icon-scroll,
-.icon-scroll:before{
-  position: absolute;
-  bottom: 10px;
-}
-
-.icon-scroll{
-  width: 22px;
-  height: 40px;
-  box-shadow: inset 0 0 0 2px #fff;
-  border-radius: 25px;
-}
-
-.icon-scroll:before{
-  content: '';
-  width: 8px;
-  height: 8px;
-  margin-left: -4px;
-  background: #fff;
-  bottom: 8px;
-  border-radius: 4px;
-  animation-duration: 1.5s;
-  animation-iteration-count: infinite;
-  animation-name: scroll;
-}
-
-@keyframes scroll{
-  0%{
-    opacity: 1;
-  }
-  100%{
-    opacity: 0;
-    transform: translateY(-20px);
-  }
-}
-
-.content-title{
-    font-family: HelveticaNeue;
-    color: #009bdb;
-    text-transform: uppercase;
-    text-align: center;
-}
-
-.content-subtitle{
-    text-align: center;
-    color: #767676;
-    font-size: 1.5rem;
-}
-
-article{
-    margin: 50px 0;
-}
-
-.article-title{
-    font-size: 1.1rem;
-    font-weight: bold;
-    color: #009bdb;
-}
-
-.article-text{
-    color: #767676;
-}
-
-.article-servico-header{
-    text-align: center;
-    color: #009bdb;
-}
-
-.article-servico-title{
+nav{
     margin: 20px 0;
 }
 
-.article-servico-body{
-    text-align: justify;
-    color: #767676
+.navbar-toggler{
+    border: none;
 }
 
-.article-servico-footer{
-    color: #767676;
+.navbar-toggler:focus{
+    animation-name: example;
+    animation-duration: 0.6s;
+    outline: none;
 }
 
-.article-service-price{
-    color: #009bdb;
-    font-weight: bolder;
-    margin-top: -8px;
-}
+@keyframes example {
+    0%   {transform: rotateX(0deg);}
+    50%  {transform: rotateX(60deg);}
+    100% {transform: rotateX(0deg);}
+  }
 
-.interessou{
-    font-size: 2rem;
-    color: #009bdb;
-    margin: 0;
-}
-
-.sessao-margem{
+header{
     margin-top: 100px;
+    margin-bottom: 100px;
 }
 
-.quem-sou-title{
-    color: #009bdb;
+.headerContainer{
+    background-image: url("../svg/invisivel-ilustracao.svg");
+    background-position: right;
+    background-repeat: no-repeat;
+    background-size: 40%;
+    min-height: 450px;
 }
 
-.quem-sou-texto{
-    color: #767676;
+.logomarca{
+    font-weight: bold;
+    font-size: 1.5em;
 }
 
-.row-flex{
-    display: flex;
-    flex-direction: column;
+.leme{
+    font-style: italic;
+    font-weight: normal;
 }
 
-.ordertext{
-    order: 2;
+h1{
+    font-weight: bold;
 }
 
-.orderimg{
-    order: 1;
+.active{
+    font-weight: bold;
 }
 
-.pc{
-    display: none;
+.nav-item{
+    margin-left: 30px;
 }
 
-.mobile{
-    display: block;;
-    text-align: center;
+.contatoBtn{
+    display: inline-block;
+    background-color: #536DFE;
+    padding: 7px 30px;
+    color: white!important;
+    border-radius: 5px;
+    border: 2px solid #536DFE;
 }
 
-.botao-fale{
-    text-align: center;
-}
-
-.contato{
-    background-color: #1E1E1E;
+.chamadaBtn{
+    display: inline-block;
+    background-color: #536DFE;
+    padding: 7px 30px;
     color: white;
+    border-radius: 5px;
+    border: 2px solid #536DFE;
+    margin-right: 20px;
 }
 
-.enviar-btn{
-    font-family: 'Roboto', sans-serif;
+.chamadaBtn:hover{
+    color: white!important;
 }
 
-.form-control{
-    border-radius: 0;
+.chamadaBtnOutlined{
+    display: inline-block;
     background-color: transparent;
-    border-color: white;
+    padding: 7px 30px;
+    color: #536DFE;
+    border-radius: 5px;
+    border: 2px solid #536DFE;
 }
 
-.contact-link{
-    color: white;
-    transition: 0.5s;
+.chamadaBtnOutlined:hover{
+    color: #536DFE!important;
 }
 
-.contact-link:hover{
+a{
+    color: inherit;
+}
+
+a:hover{
     text-decoration: none;
 }
 
-@media (min-width: 1024px){
-    .chamada{
-        background-image: url("../svg/invisivel-ilustracao.svg");
-        background-repeat: no-repeat;
-        background-position: center right;
-        background-size: 35%;
-        padding: 50px;
-    }
-    
-    .logo-expanded{
-        height: 120px;
+#servicos{
+    background-image: url("../svg/bg/servicos.svg");
+    background-position: left;
+    background-repeat: no-repeat;
+}
+
+article{
+    background-color: white;
+    box-shadow: 0px 8px 44px rgba(0,0,0,.16);
+    padding: 50px 40px;
+    margin: 40px 0;
+    border-radius: 5px;
+}
+
+article h1{
+    font-size: 1.8em;
+    color: #707070;
+    margin-bottom: 30px;
+}
+
+p{
+    color: #707070;
+}
+
+#portfolio{
+    background-image: url("../svg/bg/portfolio.svg");
+    background-position: right;
+    background-repeat: no-repeat;
+    min-height: 700px;
+    padding: 100px 0;
+}
+
+#clientes{
+    background-image: url("../svg/bg/clientes.svg");
+    background-position: left;
+    background-repeat: no-repeat;
+    min-height: 700px;
+    padding: 100px 0;
+}
+
+.clientes img{
+    margin: 20px 30px;
+    opacity: .7;
+}
+
+.clientes img:hover{
+    opacity: 1;
+}
+
+.clientes img:nth-child(1){
+    margin-left: 0;
+}
+
+.clientes img:nth-child(3n){
+    margin-right: 0;
+}
+
+#contato{
+    background-image: url("../svg/bg/contato.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 600px;
+}
+
+#contato h1{
+    color: #536DFE;
+    font-size: 5em;
+    margin-bottom: 50px;
+}
+
+#contato p{
+    margin-bottom: 30px;
+}
+
+#contato input{
+    border: none;
+    padding: 12px 20px;
+    color: #C1C1C1;
+    box-shadow: 10px 8px 44px rgba(0,0,0,.16);
+}
+
+#contato input[type="text"]{
+    background-color: white;
+    width: 60%;
+    border-radius: 5px 0px 0px 5px;
+}
+
+#contato input[type="submit"]{
+    background-color: #536DFE;
+    color: white;
+    min-width: 10%;
+    border-radius: 0px 5px 5px 0px;
+}
+
+#contato h2{
+    color: #707070;
+    margin-top: 50px;
+    margin-bottom: 30px;
+}
+
+.chamarBtn{
+    display: inline-block;
+    background-color: #2ADE53;
+    padding: 9px 40px;
+    color: white;
+    border-radius: 5px;
+    border: 2px solid #2ADE53;
+    box-shadow: 10px 8px 44px rgba(0,0,0,.16);
+}
+
+.chamarBtn:hover{
+    color: white!important;
+}
+
+#contato h3{
+    margin-top: 10px;
+    font-size: 1.2em;
+    color: #707070;
+    font-weight: bold;
+}
+
+footer{
+    background-color: #3F3D56;
+    text-align: center;
+    color: white;
+    padding: 50px 0;
+    margin-top: 100px;
+}
+
+footer h1{
+    font-size: 4em;
+}
+
+footer p{
+    color: white;
+}
+
+#return-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.7);
+    width: 50px;
+    height: 50px;
+    display: block;
+    text-decoration: none;
+    -webkit-border-radius: 35px;
+    -moz-border-radius: 35px;
+    border-radius: 35px;
+    display: none;
+    -webkit-transition: all 0.3s linear;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+#return-to-top i {
+    color: #fff!important;
+    margin: 0;
+    position: relative;
+    left: 16px;
+    top: 13px;
+    font-size: 19px;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+#return-to-top:hover {
+    background: rgba(0, 0, 0, 0.9);
+}
+#return-to-top:hover i {
+    color: #fff;
+    top: 5px;
+}
+
+@media screen and (max-width: 991px){
+    #contato h1{
+        color: #536DFE;
+        font-size: 4em;
+        margin-bottom: 50px;
     }
 
-    .logo-scroll{
-        height: 60px;
+    footer h1{
+        font-size: 2.5em;
     }
-
-    .navbar{
-        padding: .3rem 1rem;
-    }
-
-    .pc{
-        display: block;
-    }
-
-    .mobile{
-        display: none;
-    }
-
-    .chamada-textos{
-        padding-left: 0px;
-        padding-right: 0px;
-    }
-
-    .botao-fale{
-        text-align: left;
-    }
-
-    .row-flex{
-        flex-direction: row;
-    }
-
-    .ordertext{
-        order: 1;
-    }
-    
-    .orderimg{
-        order: 2;
-    }
-
-    .article-servico{
-        padding: 0 40px;
+    .contatoBtn{
+        display: inline-block;
+        background-color: transparent;
+        padding: 7px 30px;
+        color: rgba(0,0,0,.5)!important;
+        border-radius: 5px;
+        border: none;
     }
 }
 
-@media (min-width: 1200px) 
-{
+@media screen and (max-width: 767px){
+    .headerContainer{
+        background-image: none;
+        min-height: 450px;
+    }
+    .navbar-nav{
+        text-align: center;
+    }
+    .nav-item{
+        margin-left: 0px;
+    }
+    .wrapper{
+        display: flex; 
+        flex-direction: column;
+    }
 
-    .banner-title{
-        font-size: 3rem;
-        font-family: HelveticaNeue;
+    .articleTextos{
+        order: 2;
+    }
+    .articleImagem{
+        order: 1;
+        padding-bottom: 30px;
+    }
+    #contato input[type="text"]{
+        width: 75%;
     }
     
-    .maior{
-        font-size: 5rem;
+    #contato input[type="submit"]{
+        width: 25%;
     }
-    
-    .banner-subtitle{
-        font-size: 1.8rem;
-        line-height: 2rem;
+    #contato h2{
+        font-size: 1.6em;
     }
-
-    .btn{
-        font-size: 2rem;
-    }
-
-    .btn-verde{
-        background-color: #1de054;
-        padding: 10px 50px 10px 50px;
-        color: white;
-        box-shadow: 0px 6px 0px #18943b;
-    }
-
-    .btn-azul{
-        background-color: #009bdb;
-        padding: 10px 50px 10px 50px;
-        color: white;
-        box-shadow: 0px 6px 0px #167ca6;
-    }
-
-    .content-title{
-        font-size: 4rem;
-    }
-
-    .content-subtitle{
-        font-family: HelveticaNeue-Thin;
-        text-transform: uppercase;
-        text-align: center;
-        font-size: 2.5rem;
-    }
-
-    .chamada-textos{
-        text-align: center;
-        padding-left: 0px;
-        padding-right: 0px;
-    }
-
-    .btn-card{
-        font-size: 1rem;
-    }
-
-    .icon-scroll:before{
-        content: '';
-        width: 8px;
-        height: 8px;
-        background: #fff;
-        margin-left: -4px;
-        top: 8px;
-        border-radius: 4px;
-        animation-duration: 1.5s;
-        animation-iteration-count: infinite;
-        animation-name: scroll;
-      }
-      
-      @keyframes scroll{
-        0%{
-          opacity: 1;
-        }
-        100%{
-          opacity: 0;
-          transform: translateY(20px);
-        }
-      }
 }
