--- a/css/style.css
+++ b/css/style.css
@@ -81,9 +81,12 @@ h1{
     border-radius: 5px;
     border: 2px solid #536DFE;
     margin-right: 20px;
+    transition: 0.5s;
 }
 
 .chamadaBtn:hover{
+    background-color: #203CD4;
+    border-color: #203CD4;
     color: white!important;
 }
 
@@ -94,10 +97,12 @@ h1{
     color: #536DFE;
     border-radius: 5px;
     border: 2px solid #536DFE;
+    transition: 0.5s;
 }
 
 .chamadaBtnOutlined:hover{
-    color: #536DFE!important;
+    border-color: #203CD4;
+    color: #203CD4!important;
 }
 
 a{
@@ -138,6 +143,59 @@ p{
     background-repeat: no-repeat;
     min-height: 700px;
     padding: 100px 0;
+}
+
+.portfolioItem{
+    background-color: #f7f7f7;
+    border-radius: 5px;
+    box-shadow: 0px 8px 44px rgba(0,0,0,.16);
+    height: 250px;;
+    overflow: hidden;
+    position: relative;
+}
+
+.portfolioItem:hover >.portfolioBotao{
+    opacity: 1;
+    visibility: visible;
+}
+
+.portfolioLegenda{
+    color: white;
+    margin: 0 0 5px 0;
+    font-size: 1.3em;
+}
+
+.portfolioBotao{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0,0,0,.5);
+    top: 0;
+    left: 0;
+    transition: 0.5s;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.carousel-caption{
+    background-color: rgba(0,0,0,.7);
+    color: white;
+    width: 100%;
+    left: 0;
+    bottom: 0;
+}
+
+.carousel-caption p{
+    color: white!important;
+    font-weight: normal;
+}
+
+.carousel-control-next,
+.carousel-control-prev {
+    filter: invert(100%);
 }
 
 #clientes{
@@ -284,6 +342,10 @@ footer p{
 #return-to-top:hover i {
     color: #fff;
     top: 5px;
+}
+
+.modal-content{
+    border: none;
 }
 
 @media screen and (max-width: 991px){
