--- a/css/style.css
+++ b/css/style.css
@@ -349,6 +349,10 @@ footer p{
 }
 
 @media screen and (max-width: 991px){
+    .portfolioItem{
+        height: 120px;
+    }
+    
     #contato h1{
         color: #536DFE;
         font-size: 4em;
